# glsl_tracer

./: .gitignore  CMakeLists.txt
glsl/: fragment.frag  texture.frag  vertex.vert
src/: Sphere.h  camera.h  camera2.h  glad.c  main.cpp  material.h  perlin.h  shader.h  sphere.h  utils.h  window.cpp  window.h
src/glad/: glad.h
